# KeelTrader

./: .env.cloud.example  .gitignore  .pre-commit-config.yaml  .versionrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_MIGRATION.md  EXCHANGE_SETTINGS_GUIDE.md  FRONTEND_SETUP_COMPLETE.md  MARKET_DATA_INTEGRATION.md  QUICK_START_EXCHANGES.md  README.md  README.zh-CN.md  SECURITY.md  codecov.yml  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml  release.yml
.husky/: pre-commit
aiwendy/: .env.example  Makefile  README.md  build.bat  build.sh  docker-compose.yml
aiwendy/apps/api/: config.py  main.py  pyproject.toml  pytest.ini  requirements.cloud.txt  requirements.txt
aiwendy/apps/api/core/: auth.py  cache.py  cache_service.py  database.py  db_bootstrap.py  encryption.py  exceptions.py  i18n.py  logging.py  middleware.py  ratelimit.py
aiwendy/apps/api/domain/analysis/: __init__.py  models.py
aiwendy/apps/api/domain/analytics/: ml_analytics.py
aiwendy/apps/api/domain/coach/: models.py
aiwendy/apps/api/domain/exchange/: __init__.py  models.py  repository.py
aiwendy/apps/api/domain/journal/: models.py  repository.py  schemas.py
aiwendy/apps/api/domain/knowledge/: chunking.py  models.py
aiwendy/apps/api/domain/project/: models.py
aiwendy/apps/api/domain/report/: __init__.py  models.py
aiwendy/apps/api/domain/tenant/: models.py
aiwendy/apps/api/domain/user/: models.py  schemas.py
aiwendy/apps/api/infrastructure/llm/: anthropic_provider.py  base.py  custom_api_provider.py  factory.py  ollama_advanced.py  ollama_provider.py  openai_provider.py  router.py
aiwendy/apps/api/infrastructure/voice/: voice_service.py
aiwendy/apps/api/routers/: __init__.py  analysis.py  auth.py  chat.py  coaches.py  dashboard.py  exchanges.py  files.py  health.py  journals.py  knowledge.py  llm_config.py  market_data.py  ollama.py  projects.py  reports.py  roundtable.py  tasks.py  user_exchanges.py  users.py
aiwendy/apps/api/scripts/: USAGE.md  add_api_keys_columns.py  add_journal_tables.py  configure_oneapi.py  create_user_sessions_table.py  init_coaches.py  init_database.py  init_db_simple.py  init_user.py  init_user_simple.py  migrate_chat_messages.py  migrate_to_multi_tenant.py  save_api_key.py  setup_custom_api.py
aiwendy/apps/api/services/: analytics.py  coach_service.py  exchange_service.py  journal_ai_analyzer.py  journal_importer.py  llm_router.py  market_data_service.py  market_data_websocket.py  ollama_service.py  report_service.py  storage_service.py  user_exchange_service.py
aiwendy/apps/api/tests/: conftest.py  test_health.py
aiwendy/apps/api/workers/: __init__.py  celery_app.py  knowledge_tasks.py  report_tasks.py  tasks.py
aiwendy/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_MODES.md  I18N_GUIDE.md  INDEX.md  SELF_HOSTING.md
aiwendy/scripts/: deploy.sh  init_phase2.bat
docs/: CUSTOM_API_SETUP.md  DEPLOYMENT_MODES.md  I18N_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  SECURITY_FIXES.md  TODO_GUIDELINES.md  TODO_REPORT.md  VERSION_MANAGEMENT.md
keeltrader/: .env.example  .gitignore  DOCKER_SETUP.md  Makefile  alembic.ini  docker-compose.yml
keeltrader/apps/api/: .dockerignore  .flake8  Dockerfile  config.py  main.py  pyproject.toml  requirements.cloud.txt  requirements.txt
keeltrader/apps/api/core/: cache.py  cache_keys.py  database.py  db_bootstrap.py  encryption.py  logging.py  middleware.py  ratelimit.py  task_events.py
keeltrader/apps/api/domain/analysis/: models.py
keeltrader/apps/api/domain/analytics/: ml_analytics.py
keeltrader/apps/api/domain/coach/: models.py
keeltrader/apps/api/domain/exchange/: __init__.py  models.py
keeltrader/apps/api/domain/intervention/: models.py
keeltrader/apps/api/domain/journal/: __init__.py  models.py
keeltrader/apps/api/domain/knowledge/: __init__.py  models.py
keeltrader/apps/api/domain/report/: __init__.py  models.py
keeltrader/apps/api/domain/tenant/: __init__.py
keeltrader/apps/api/infrastructure/llm/: __init__.py  anthropic_provider.py  custom_api_provider.py  openai_provider.py
keeltrader/apps/api/infrastructure/voice/: voice_service.py
keeltrader/apps/api/routers/: auth.py  chat.py  coaches.py  dashboard.py  files.py  intervention.py  knowledge.py  llm_config.py  market_data.py  notifications.py  projects.py  user_exchanges.py  users.py
keeltrader/apps/api/routes/: intervention.py  notifications.py
keeltrader/apps/api/scripts/: USAGE.md  configure_oneapi.py  create_user_sessions_table.py  docker_start.sh  init_db_simple.py  init_user.bat  init_user.py  init_user_simple.py  migrate_chat_messages.py  migrate_to_multi_tenant.py  setup_custom_api.py
keeltrader/apps/api/services/: coach_service.py  exchange_service.py  file_extractor.py  intervention_service.py  journal_ai_analyzer.py  market_data_adapters.py  market_data_service.py  market_data_websocket.py  notification_service.py  notification_websocket.py  ollama_service.py  report_service.py  sso.py  storage_service.py  trade_sync_service.py  user_exchange_service.py
keeltrader/apps/api/tasks/: notification_tasks.py
keeltrader/apps/api/workers/: celery_app.py  report_tasks.py  tasks.py
keeltrader/docs/: CUSTOM_API_SETUP.md  (+4 more)
scripts/: scan_todos.py
(+124 files in other folders)
