[tool.poetry]
name = "keeltrader-api"
version = "0.1.0"
description = "KeelTrader API - AI-powered trading psychology coach"
authors = ["KeelTrader Team"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"

# Core
fastapi = "0.128.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
pydantic = "2.12.5"
pydantic-settings = "2.12.0"

# Database
sqlalchemy = "2.0.45"
alembic = "1.18.1"
asyncpg = "0.31.0"
psycopg2-binary = "2.9.11"
pgvector = "0.4.2"
aiosqlite = "0.22.1"  # For SQLite async support in tests

# Redis & Celery
redis = "5.0.4"
celery = "5.6.2"

# LLM
openai = "1.30.5"
anthropic = "0.76.0"
tiktoken = "0.12.0"

# HTTP
httpx = "0.28.1"
aiohttp = "3.13.3"

# Auth
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.21"

# Monitoring
sentry-sdk = {extras = ["fastapi"], version = "2.3.1"}

# Utils
python-dotenv = "1.2.1"
structlog = "24.1.0"
tenacity = "8.2.3"
aiofiles = "24.1.0"

# File Processing
PyPDF2 = "3.0.1"
python-docx = "1.2.0"
openpyxl = "3.1.5"
python-pptx = "1.0.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "8.2.0"
pytest-asyncio = "0.23.6"
factory-boy = "3.3.3"
faker = "24.4.0"
pytest-cov = "^5.0.0"

# Dev Tools
black = "24.3.0"
isort = "5.13.2"
flake8 = "7.3.0"
mypy = "1.19.1"
pre-commit = "3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    "alembic",
    "tests"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
